# shelly-ota

./: .gitignore  README.md  auth_file.sample  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  shelly-ota.py  test_auth.py
.github/workflows/: codeql-analysis.yml  python-ci.yml
lib/: shelly.py  updateserver.py  venvtools.py
shelly_ota/: auth.py  main.py  shelly.py
