[metadata]
name = shelly-ota
version = 2022.8.20
url = https://github.com/bpetrikovics/shelly-ota
description = OTA upgrade tool for Shelly IoT devices
keywords = shelly, iot, ota, upgrade
license = MIT
author = Balazs Petrikovics
author_email = bpetrikovics@gmail.com

[options]
packages = find:
install_requires =
    requests
    netifaces

[options.entry_points]
console_scripts =
    shelly-ota = shelly_ota.main:main
